actualización de actividad

--- a/1_examen_solucion.tex
+++ b/1_examen_solucion.tex
@@ -200,6 +200,7 @@ Para realizar los análisis de manera más eficiente se definieron 10
 funciones para el muestreo aleatorio simple como para el muestro
 sistemático. que se pueden ver en los archivos en el siguiente
 repositorio propio de Github:
+(\url{https://github.com/JCRianoM/Muestro-estad-stico-test1.git})
 
 Dichas funciones realizan el procesamiento visto en clase para una sola
 variable directamente para todas las variables, de esta forma la
@@ -3773,10 +3774,6 @@ Varianza Total\strut
 \end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
-
-\hypertarget{conclusiones-muestreo-aleatorio-simple}{%
-\section{Conclusiones muestreo aleatorio
-simple}\label{conclusiones-muestreo-aleatorio-simple}}
 
 \hypertarget{muestreo-sistematico}{%
 \subsection{Muestreo sistematico}\label{muestreo-sistematico}}
@@ -9754,9 +9751,5 @@ Varianza Total\strut
 \end{minipage}\tabularnewline
 \bottomrule
 \end{longtable}
-
-\hypertarget{conlusiones-muestreo-sistemuxe1tico}{%
-\section{Conlusiones (muestreo
-sistemático)}\label{conlusiones-muestreo-sistemuxe1tico}}
 
 \end{document}
