--- a/1_examen_solucion.Rmd
+++ b/1_examen_solucion.Rmd
@@ -392,7 +392,7 @@ est_final_sys <- function (data_sampling, n_var, N, muestra_sel) {
 
 La base de datos entregada corresponde a un archivo que contiene 12 variables y 4898 observaciones. Por tal razón, se conoce el tamaño de la población que se está estudiante para este caso $N = 4898$. 
 
-Para realizar los análisis de manera más eficiente se definieron 10 funciones para el muestreo aleatorio simple como para el muestro sistemático. que se pueden ver en los archivos en el siguiente repositorio propio de Github: 
+Para realizar los análisis de manera más eficiente se definieron 10 funciones para el muestreo aleatorio simple como para el muestro sistemático. que se pueden ver en los archivos en el siguiente repositorio propio de Github: (https://github.com/JCRianoM/Muestro-estad-stico-test1.git) 
 
 Dichas funciones realizan el procesamiento visto en clase para una sola variable directamente para todas las variables, de esta forma la información en este documento será definida de esta misma forma. D
 
