actualización de funciones para agilizar estimadores finales

--- a/1_examen_solucion.Rmd
+++ b/1_examen_solucion.Rmd
@@ -360,6 +360,37 @@ est_final_sys <- function (data_sampling, n_var, N, muestra_sel) {
     print(results)
 }
 
+
+
+est_total_simple<- function(N, n, df){
+    df <- apply(df, 2, as.numeric)
+    df <- as.data.frame(df)
+    table <- matrix(NA, nrow = 10, ncol = (dim(df)[2]))
+    rownames(table) = c('Int. Inferior', 'Media muestra', 'Int. Superior', 
+                        'DesviaciÃ³n std.','Varianza', 'Coeficiente var.',
+                        'Int. Inferior total', 'Media Total', 
+                        'Int. Superior Total', 'Varianza Total')
+    colnames(table) <- names(df)
+    for (k in 1:dim(df)[2]) {
+        med_s <- mean(df[,k])
+        sd_s <- sd(df[,k])
+        Inf_int_s <- med_s - 2 * (sd_s/sqrt(n))
+        Sup_int_s <- med_s + 2 * (sd_s/sqrt(n))
+        Coef_var <- (sd_s/med_s)
+        var_var <- (sd_s^2/n)*((N-n)/N)
+        med_total <- med_s*N
+        v_t <- var_var*N^2
+        Inf_int_var <- med_s*N-2*sqrt(v_t)
+        Sup_int_var <- med_s*N+2*sqrt(v_t)
+        col_noms <- c('Int. Inferior', 'Media muestra', 'Int. Superior', 
+                      'Desviación std.','Varianza', 'Coeficiente var.',
+                      'Int. Inferior total', 'Media Total', 
+                      'Int. Superior Total', 'Varianza Total')
+        table[, k] <- c(Inf_int_s, med_s, Sup_int_s, sd_s, var_var,
+                        Coef_var, Inf_int_var, med_total, Sup_int_var,v_t)
+    }
+    print(data.frame(t(table)))
+}
 ```
 
 # Actividad
@@ -1123,4 +1154,18 @@ pandoc.table(df_sys_final,
              align = 'r')
 ```
 
+```{r cosa end, echo=FALSE, message=FALSE, results='asis'}
+xp <- est_total_simple(4898, 254, wine)
+```
 
+```{r estimadores finales tttt sys1, echo=FALSE, message=FALSE, results='asis'}
+panderOptions('missing', '---')
+pandoc.table(xp,
+             caption = 
+             'Tabla estimadores de la muestra y totales 
+             para cada variable usando el valor de $n$ resultado del piloto',
+             digits = 3,
+             split.cells = 2,
+             split.table = 90,
+             align = 'r')
+```
