--- a/1_examen_solucion.tex
+++ b/1_examen_solucion.tex
@@ -9752,4 +9752,470 @@ Varianza Total\strut
 \bottomrule
 \end{longtable}
 
+\begin{verbatim}
+                 Int..Inferior Media.muestra Int..Superior DesviaciÃ³n.std.
+\end{verbatim}
+
+fixed acidity 5.884778e+01 6.240976e+01 6.597174e+01 2.838431e+01
+volatile acidity 2.655923e-01 2.782411e-01 2.908899e-01 1.007945e-01
+citric acid 3.190046e-01 3.341915e-01 3.493784e-01 1.210198e-01 residual
+sugar 5.754916e+00 6.391415e+00 7.027913e+00 5.072058e+00 chlorides
+4.303063e-02 4.577236e-02 4.851408e-02 2.184797e-02 free sulfur dioxide
+3.283027e+01 4.100796e+01 4.918566e+01 6.516549e+01 total sulfur dioxide
+1.293422e+02 1.486313e+02 1.679203e+02 1.537085e+02 density 9.936520e-01
+9.940274e-01 9.944027e-01 2.990907e-03 pH 2.755234e+02 2.870768e+02
+2.986302e+02 9.206556e+01 sulphates 4.755251e-01 4.898469e-01
+5.041687e-01 1.141258e-01 alcohol -2.529488e+12 1.823234e+12
+6.175956e+12 3.468548e+13 quality 5.766770e+00 5.877909e+00 5.989049e+00
+8.856386e-01 Varianza Coeficiente.var. Int..Inferior.total fixed acidity
+3.007437e+00 0.454805706 2.886948e+05 volatile acidity 3.792397e-05
+0.362256121 1.302499e+03 citric acid 5.467044e-05 0.362127109
+1.564439e+03 residual sugar 9.603026e-02 0.793573550 2.826949e+04
+chlorides 1.781812e-06 0.477317970 2.111169e+02 free sulfur dioxide
+1.585167e+01 1.589093622 1.618551e+05 total sulfur dioxide 8.819331e+01
+1.034160011 6.360005e+05 density 3.339224e-08 0.003008878 4.866956e+03
+pH 3.163983e+01 0.320700133 1.351000e+06 sulphates 4.861918e-05
+0.232982672 2.330965e+03 alcohol 4.490919e+24 19.024155049 -1.182928e+16
+quality 2.927877e-03 0.150672377 2.825994e+04 Media.Total
+Int..Superior.Total Varianza.Total fixed acidity 3.056830e+05
+3.226712e+05 7.214963e+07 volatile acidity 1.362825e+03 1.423151e+03
+9.098114e+02 citric acid 1.636870e+03 1.709301e+03 1.311566e+03 residual
+sugar 3.130515e+04 3.434081e+04 2.303805e+06 chlorides 2.241930e+02
+2.372691e+02 4.274638e+01 free sulfur dioxide 2.008570e+05 2.398589e+05
+3.802880e+08 total sulfur dioxide 7.279960e+05 8.199915e+05 2.115793e+09
+density 4.868746e+03 4.870536e+03 8.010932e-01 pH 1.406102e+06
+1.461204e+06 7.590522e+08 sulphates 2.399270e+03 2.467575e+03
+1.166394e+03 alcohol 8.930200e+15 2.968968e+16 1.077390e+32 quality
+2.879000e+04 2.932006e+04 7.024094e+04
+
+\begin{longtable}[]{@{}ccccl@{}}
+\caption{Tabla estimadores de la muestra y totales para cada variable
+usando el valor de \(n\) resultado del piloto (continued
+below)}\tabularnewline
+\toprule
+\begin{minipage}[b]{0.17\columnwidth}\centering
+~\strut
+\end{minipage} & \begin{minipage}[b]{0.17\columnwidth}\centering
+Int..Inferior\strut
+\end{minipage} & \begin{minipage}[b]{0.17\columnwidth}\centering
+Media.muestra\strut
+\end{minipage} & \begin{minipage}[b]{0.17\columnwidth}\centering
+Int..Superior\strut
+\end{minipage} & \begin{minipage}[b]{0.20\columnwidth}\raggedright
+DesviaciÃƒÂ³n.std.\strut
+\end{minipage}\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+\begin{minipage}[b]{0.17\columnwidth}\centering
+~\strut
+\end{minipage} & \begin{minipage}[b]{0.17\columnwidth}\centering
+Int..Inferior\strut
+\end{minipage} & \begin{minipage}[b]{0.17\columnwidth}\centering
+Media.muestra\strut
+\end{minipage} & \begin{minipage}[b]{0.17\columnwidth}\centering
+Int..Superior\strut
+\end{minipage} & \begin{minipage}[b]{0.20\columnwidth}\raggedright
+DesviaciÃƒÂ³n.std.\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{fixed acidity}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+58.8\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+62.4\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+66\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+28.4\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{volatile acidity}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.266\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.278\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.291\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+0.101\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{citric acid}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.319\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.334\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.349\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+0.121\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{residual sugar}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+5.75\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+6.39\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+7.03\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+5.07\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{chlorides}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.043\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.0458\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.0485\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+0.0218\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{free sulfur dioxide}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+32.8\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+41\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+49.2\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+65.2\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{total sulfur dioxide}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+129\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+149\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+168\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+154\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{density}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.994\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.994\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.994\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+0.00299\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{pH}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+276\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+287\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+299\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+92.1\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{sulphates}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.476\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.49\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+0.504\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+0.114\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{alcohol}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+-2.53e+12\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+1.82e+12\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+6.18e+12\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+3.47e+13\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{quality}\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+5.77\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+5.88\strut
+\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\centering
+5.99\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\raggedright
+0.886\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\begin{longtable}[]{@{}ccccc@{}}
+\caption{Table continues below}\tabularnewline
+\toprule
+\begin{minipage}[b]{0.17\columnwidth}\centering
+~\strut
+\end{minipage} & \begin{minipage}[b]{0.12\columnwidth}\centering
+Varianza\strut
+\end{minipage} & \begin{minipage}[b]{0.20\columnwidth}\centering
+Coeficiente.var.\strut
+\end{minipage} & \begin{minipage}[b]{0.23\columnwidth}\centering
+Int..Inferior.total\strut
+\end{minipage} & \begin{minipage}[b]{0.15\columnwidth}\centering
+Media.Total\strut
+\end{minipage}\tabularnewline
+\midrule
+\endfirsthead
+\toprule
+\begin{minipage}[b]{0.17\columnwidth}\centering
+~\strut
+\end{minipage} & \begin{minipage}[b]{0.12\columnwidth}\centering
+Varianza\strut
+\end{minipage} & \begin{minipage}[b]{0.20\columnwidth}\centering
+Coeficiente.var.\strut
+\end{minipage} & \begin{minipage}[b]{0.23\columnwidth}\centering
+Int..Inferior.total\strut
+\end{minipage} & \begin{minipage}[b]{0.15\columnwidth}\centering
+Media.Total\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{fixed acidity}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+3.01\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+0.455\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+288695\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+305683\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{volatile acidity}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+3.79e-05\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+0.362\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+1302\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+1363\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{citric acid}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+5.47e-05\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+0.362\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+1564\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+1637\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{residual sugar}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+0.096\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+0.794\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+28269\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+31305\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{chlorides}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+1.78e-06\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+0.477\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+211\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+224\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{free sulfur dioxide}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+15.9\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+1.59\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+161855\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+200857\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{total sulfur dioxide}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+88.2\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+1.03\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+636000\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+727996\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{density}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+3.34e-08\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+0.00301\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+4867\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+4869\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{pH}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+31.6\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+0.321\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+1351000\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+1406102\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{sulphates}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+4.86e-05\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+0.233\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+2331\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+2399\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{alcohol}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+4.49e+24\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+19\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+-1.18e+16\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+8.93e+15\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.17\columnwidth}\centering
+\textbf{quality}\strut
+\end{minipage} & \begin{minipage}[t]{0.12\columnwidth}\centering
+0.00293\strut
+\end{minipage} & \begin{minipage}[t]{0.20\columnwidth}\centering
+0.151\strut
+\end{minipage} & \begin{minipage}[t]{0.23\columnwidth}\centering
+28260\strut
+\end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\centering
+28790\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\begin{longtable}[]{@{}ccc@{}}
+\toprule
+\begin{minipage}[b]{0.20\columnwidth}\centering
+~\strut
+\end{minipage} & \begin{minipage}[b]{0.28\columnwidth}\centering
+Int..Superior.Total\strut
+\end{minipage} & \begin{minipage}[b]{0.22\columnwidth}\centering
+Varianza.Total\strut
+\end{minipage}\tabularnewline
+\midrule
+\endhead
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{fixed acidity}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+322671\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+72149628\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{volatile acidity}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+1423\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+910\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{citric acid}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+1709\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+1312\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{residual sugar}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+34341\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+2303805\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{chlorides}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+237\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+42.7\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{free sulfur dioxide}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+239859\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+3.8e+08\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{total sulfur dioxide}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+819992\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+2.12e+09\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{density}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+4871\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+0.801\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{pH}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+1461204\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+7.59e+08\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{sulphates}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+2468\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+1166\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{alcohol}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+2.97e+16\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+1.08e+32\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.20\columnwidth}\centering
+\textbf{quality}\strut
+\end{minipage} & \begin{minipage}[t]{0.28\columnwidth}\centering
+29320\strut
+\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\centering
+70241\strut
+\end{minipage}\tabularnewline
+\bottomrule
+\end{longtable}
+
 \end{document}
